[gd_scene load_steps=3 format=3 uid="uid://dq5keub5rdyqu"]

[ext_resource type="Script" path="res://ui.gd" id="1_mpobn"]
[ext_resource type="PackedScene" uid="uid://bqovgipben058" path="res://countdown_panel.tscn" id="2_2om60"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mpobn")

[node name="LeftScore" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -846.0
offset_top = 40.0
offset_right = -806.0
offset_bottom = 98.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 50
text = "0"

[node name="RightScore" type="Label" parent="."]
layout_mode = 0
offset_left = 878.0
offset_top = 40.0
offset_right = 918.0
offset_bottom = 98.0
theme_override_font_sizes/font_size = 50
text = "0"

[node name="CountdownPanel" parent="." instance=ExtResource("2_2om60")]
visible = false
layout_mode = 1

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -2.5
offset_top = 40.0
offset_right = 2.5
offset_bottom = 100.0
grow_horizontal = 2
color = Color(1, 1, 1, 0.65098)

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -2.5
offset_top = 140.0
offset_right = 2.5
offset_bottom = 200.0
grow_horizontal = 2
color = Color(1, 1, 1, 0.65098)

[node name="ColorRect3" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -2.5
offset_top = 240.0
offset_right = 2.5
offset_bottom = 300.0
grow_horizontal = 2
color = Color(1, 1, 1, 0.65098)

[node name="ColorRect4" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -2.5
offset_top = 340.0
offset_right = 2.5
offset_bottom = 400.0
grow_horizontal = 2
color = Color(1, 1, 1, 0.65098)

[node name="ColorRect5" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -2.5
offset_top = 440.0
offset_right = 2.5
offset_bottom = 500.0
grow_horizontal = 2
color = Color(1, 1, 1, 0.65098)

[node name="ColorRect6" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -2.5
offset_top = 540.0
offset_right = 2.5
offset_bottom = 600.0
grow_horizontal = 2
color = Color(1, 1, 1, 0.65098)

[node name="WinnerLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -142.5
offset_right = 0.5
offset_bottom = -119.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 55
text = "Player X is the winner!"
horizontal_alignment = 1

[connection signal="countdown_over" from="CountdownPanel" to="." method="_on_countdown_panel_countdown_over"]
